--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -51,6 +51,12 @@
         >
         <i class="fa-solid fa-trash"></i>Delete Product
         </button>
+
+        <div>
+        <a href="{% url "products" %}">
+          <i class="fas fa-arrow-left mr-2"></i> Back to Products</a
+        >
+        </div>
     </form>
     <div
     class="modal fade"
