Add rel tag link to FB business page

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,7 @@
               role="button"
               target="_blank"
               aria-label="Link to our Facebook"
+              rel="noopener noreferrer"
 
               ><i class="fab fa-facebook-f"></i
             ></a>
