Add minor wont fix bugs to readme

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -48,7 +48,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
   {% blocktrans %}
   <div class="form-text  text-center mt-2 text-dark">Not
-  Registered? <a href="{{ signup_url }}" class="link-dark fw-bold"> Create an
+  Registered? <a href="{{ signup_url }}" class="link-primary fw-bold"> Create an
     Account</a>
 {% endblocktrans %}
 
