--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -26,7 +26,7 @@
 
 
 {% blocktrans %}
-<div  class="form-text text-center mt-2 mb-5 text-dark">Already have an account? <a href="{{ login_url }}" class="text-dark fw-bold"> Sign In</a>
+<div  class="form-text text-center mt-2 mb-5 text-dark">Already have an account? <a href="{{ login_url }}" class="link primary fw-bold"> Sign In</a>
 
   {% endblocktrans %}
 
