--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -187,7 +187,7 @@
 
         <div class="row mb-1">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Delivery</p>
+            <p class="mb-0 text-black font-weight-bold">Delivery/Admin</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <strong class="mb-0">${{ order.delivery_cost }}</strong>
