Improve privacy link UI

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -269,6 +269,7 @@
 
     <div class="small">
       We care about privacy, and will never share your data.
+      Read up on our polciy <a href="{% url 'privacy' %}" class='link-primary fw-bolder'>here</a>.
     </div>
   </div>
 </aside>
