--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
             <div class="small m-0 text-white mb-2">
               Copyright &copy; Your CiSwag 2024
             </div>
-            <a class="link-light small mb-3" href="{% url "privacy" %}">Privacy</a>
+            <a class="link-light small mb-3 fw-bolder" href="{% url "privacy" %}">Privacy</a>
           </div>
           <div class="col-auto">
             <!-- Email Developer -->
