Fix program card link

--- a/products/templates/includes/related_items.html
+++ b/products/templates/includes/related_items.html
@@ -37,12 +37,13 @@
             </div>
           </div>
           <!-- Item actions-->
-          <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center">
-              <a class="btn btn-outline-dark mt-auto" href="{% url "product_detail" related.id %}">View Product</a>
-            </div>
-
-          </div>
+          <div class="text-center">
+            {% if item == 'prog' %}
+                <a class="btn btn-outline-dark mt-auto" href="{% url "program_detail" related.id %}">View Program</a>
+            {% else %}
+                <a class="btn btn-outline-dark mt-auto" href="{% url "product_detail" related.id %}">View Product</a>
+            {% endif %}
+        </div>
         </article>
       </div>
       {% endfor %}
