Updated logo and favicon for Vista Sphere

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
   <nav class="container sticky-nav navbar navbar-expand-lg navbar-light bg-light p-0">
     <div class="container-fluid">
       <a class="navbar-brand fw-bolder logo" href="{% url 'home' %}">
-        <img src="{% static 'images/logo.webp' %}" alt="code institute swag logo">
+        <img src="{% static 'images/logo.webp' %}" alt="visste sphere logo">
       </a>
       <button
         class="navbar-toggler"
